# cultivars-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  DATA_LICENSE.md  FORK_NOTES.md  LICENSE  NOTICE  README.md  WANTED_TRAITS.yaml  atlas_evidence.json  pyproject.toml  server.py
.claude/skills/cultivars/: SKILL.md
.claude/skills/evee/: SKILL.md
.github/workflows/: ci.yml
docs/: PATREON_INTRO.md  USER_GUIDE.md
docs/integrations/: BIMS.md
phenotypes/: README.md
tests/: test_server.py
