[project]
name = "evee-mcp"
version = "0.1.0"
description = "MCP server for the EVEE (Evo Variant Effect Explorer) API — variant effect prediction from genomic foundation model embeddings"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
