[project]
name = "cultivars-mcp"
version = "0.1.0"
description = "MCP server for plant genomics research — gene lookup, variant effect prediction, orthology, sequence retrieval, and a curated atlas of natural-farming-relevant gene families via the Ensembl Plants REST API. Part of the Copyleft Cultivars ecosystem."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
